--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
                         </md-input-container>
                     </form>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4" ng-controller="AccessCtrl as Access">
                     <ul class="nav navbar-expand-lg justify-content-end">
                         <li>
                             <a ui-sref="register({user:true, wholesale:false})" class="btn btn-link"
@@ -116,11 +116,10 @@
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                 <a ui-sref="dashboard" class="dropdown-item">Mi cuenta </a>
-                                <a href="" class="dropdown-item">Mensajes <span class="badge badge-danger">1</span></a>
                                 <a href="" ng-click="Access.logout()" class="dropdown-item"> Cerrar sesión</a>
                             </div>
                         </li>
-                        <ul class="nav navbar-expand-lg desk-hidde" ng-controller="AccessCtrl as Access">
+                        <ul class="nav navbar-expand-lg desk-hidde">
                             <li>
                                 <a ui-sref="shopcart" class="shopping-cart" ng-if="ecommerce"
                                    ng-controller="AccessCtrl as Access">
