--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,6 @@
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
     <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
-    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- inject:css -->
@@ -76,15 +75,15 @@
     <div class="first-row">
         <div class="container">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                     <ul class="nav navbar-expand-lg mobile-hidde">
-                        <li>
-                            <a style="margin-top: 10px;" href="http://hannypulido.com.mx/page/sucursales1524857728"
-                               class="btn btn-link"><i class="fa fa-building"></i> Sucursales</a>
+                        <li class="nav-item" ng-repeat="social in socialMedia">
+                            <a class="nav-link" href="{{ social.excerpt }}"><i class="{{ social.title }}"></i> <span
+                                ng-bind-html="social.content | trustHtml"></span></a>
                         </li>
                     </ul>
                 </div>
-                <div class="col-sm-6" ng-controller="GetQuerySearchCtrl as Search">
+                <div class="col-sm-4" ng-controller="GetQuerySearchCtrl as Search">
                     <form name="search" role="search" class="input-search"
                           ng-submit="Search.globalSearch('product')">
                         <md-input-container md-no-float>
@@ -95,17 +94,19 @@
                     </form>
                 </div>
                 <div class="col-sm-4" ng-controller="AccessCtrl as Access">
-                    <ul class="nav navbar-expand-lg justify-content-end">
-                        <li>
-                            <a ui-sref="register({user:true, wholesale:false})" class="btn btn-link"
+                    <ul class="navbar-nav navbar-expand-lg justify-content-end ">
+                        <li class="nav-item" ng-repeat="item in mainNavMenuHelp">
+                            <a class="nav-link" href="{{ item.link }}">{{item.name}}</a>
+                        </li>
+                        <li class="nav-item desk-hidde">
+                            <a ui-sref="register({user:true, wholesale:false})" class="nav-link"
                                ng-if="!Access.isAuthenticated()">
-                                <i class="ion-ios-person"></i> Iniciar sesión
+                                <i class="fa fa-user-circle"></i> Iniciar sesión
                             </a>
                         </li>
-                        <li>
-                            <a ui-sref="register({user:false, wholesale:true})" class="btn btn-optional"
-                               ng-if="!Access.isAuthenticated()">
-                                <i class="ion-ios-star"></i> Mayoristas
+                        <li class="nav-item">
+                            <a ui-sref="register({user:false, wholesale:true})" class="nav-link text-danger"
+                               ng-if="!Access.isAuthenticated()"> Mayoristas
                             </a>
                         </li>
                         <li class="dropdown">
@@ -142,13 +143,30 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-content-center">
                     <li class="nav-item" ng-repeat="item in mainNavMenu">
                         <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-expand-lg mobile-hidde" ng-controller="AccessCtrl as Access">
+                <ul class="navbar-nav navbar-expand-lg mobile-hidde" ng-controller="AccessCtrl as Access">
+                    <li class="nav-item">
+                        <a ui-sref="register({user:true, wholesale:false})" class="nav-link"
+                           ng-if="!Access.isAuthenticated()">
+                            <i class="fa fa-user-circle"></i> Iniciar sesión
+                        </a>
+                    </li>
+                    <li class="dropdown nav-item">
+                        <a ng-if="Access.isAuthenticated()" class="dropdown-toggle nav-link" type="button"
+                                id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <i class="fa fa-user-circle"></i> {{user.username}}
+                            <span class="caret"></span>
+                    </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <a ui-sref="dashboard" class="dropdown-item">Mi cuenta </a>
+                            <a href="" ng-click="Access.logout()" class="dropdown-item"> Cerrar sesión</a>
+                        </div>
+                    </li>
                     <li>
                         <a ui-sref="shopcart" class="shopping-cart" ng-if="ecommerce"
                            ng-controller="AccessCtrl as Access">
@@ -197,7 +215,6 @@
 <script src="lib/ng-file-upload/ng-file-upload.js"></script>
 <script src="lib/angular-ui-select/dist/select.js"></script>
 <script src="lib/ng-table/dist/ng-table.js"></script>
-<script src="lib/sweetalert/dist/sweetalert.min.js"></script>
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
