--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
     <div class="first-row">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4 data-social-media">
+                <div class="col-lg-4 col-md-2 col-sm-2 data-social-media">
                     <ul class="navbar-nav navbar-expand-lg mobile-hidde">
                         <li class="nav-item" ng-repeat="social in socialMedia">
                             <a class="nav-link" href="{{ social.excerpt }}"><span
@@ -83,7 +83,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-sm-4 mobile-hidde" ng-controller="GetQuerySearchCtrl as Search">
+                <div class="col-md-4 col-sm-4 mobile-hidde" ng-controller="GetQuerySearchCtrl as Search">
                     <form name="search" role="search" class="input-search"
                           ng-submit="Search.globalSearch('product')">
                         <md-input-container md-no-float>
@@ -93,7 +93,7 @@
                         </md-input-container>
                     </form>
                 </div>
-                <div class="col-sm-4" ng-controller="AccessCtrl as Access">
+                <div class="col-lg-4 col-md-6 col-sm-6" ng-controller="AccessCtrl as Access">
                     <ul class="navbar-nav navbar-expand-lg justify-content-end ">
                         <li class="nav-item mobile-hidde" ng-repeat="item in mainNavMenuHelp">
                             <a class="nav-link" href="{{ item.link }}">{{item.name}}</a>
