add suport for groups

--- a/app/index.html
+++ b/app/index.html
@@ -180,7 +180,7 @@
 </header>
 
 <div class="content-area-web">
-    <div ui-view="content"></div>
+    <div ui-view="content" autoscroll="true"></div>
 </div>
 
 <footer id="footer_area">
