config for deploy

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <meta property="og:description" content="{{ post.excerpt }}" ng-if="post"/>
     <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://www.sydgroup.mx{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="https://www.monnavintage.com.mx{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
@@ -252,7 +252,7 @@
         a.src = g;
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-53555832-51', {'cookieDomain': 'none'});
+    ga('create', 'UA-53551138-8', {'cookieDomain': 'none'});
 </script>
 </body>
 </html>
