--- a/app/index.html
+++ b/app/index.html
@@ -102,8 +102,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a ui-sref="register({user:false, wholesale:true})" class="nav-link text-danger"
-                               ng-if="!Access.isAuthenticated()"> <i class="fa fa-gift"></i> Ofertas
+                            <a ui-sref="register({user:false, wholesale:true})" class="nav-link text-danger"> <i class="fa fa-gift"></i> Ofertas
                             </a>
                         </li>
                         <li class="dropdown">
@@ -232,5 +231,22 @@
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-53551138-8', {'cookieDomain': 'none'});
 </script>
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+524531076764", // WhatsApp number
+            company_logo_url: "https://media.tingsystems.com/media/attachments/5/3/c/8/cd82b1cb148f9a16f76443cf23ff48de1f4215e61680ccc340229dee1207/m.png", // URL of company logo (png, jpg, gif)
+            greeting_message: "Hola, estamos listos pata atenderte, ¿tienes alguna pregunta?", // Text of greeting message
+            call_to_action: "Contáctanos", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+        };
+        var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+
+
 </body>
 </html>
