--- a/app/index.html
+++ b/app/index.html
@@ -96,13 +96,13 @@
                 <div class="col-lg-3 col-md-6 col-sm-6" ng-controller="AccessCtrl as Access">
                     <ul class="navbar-nav navbar-expand-lg justify-content-end ">
                         <li class="nav-item">
-                            <a ui-sref="register({user:true, wholesale:false})" class="nav-link"
-                               ng-if="!Access.isAuthenticated()">
-                                <i class="fa fa-user-circle"></i> Iniciar sesión
+                            <a href="https://moneek.mx/category/ofertas" class="nav-link text-danger"> <i class="fa fa-gift"></i> Ofertas
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a ui-sref="register({user:false, wholesale:true})" class="nav-link text-danger"> <i class="fa fa-gift"></i> Ofertas
+                            <a ui-sref="register({user:true, wholesale:false})" class="nav-link"
+                               ng-if="!Access.isAuthenticated()">
+                                <i class="fa fa-user-circle"></i> Iniciar sesión
                             </a>
                         </li>
                         <li class="nav-item">
