ajuste de estilo en loader y ajuste en el top header

--- a/app/index.html
+++ b/app/index.html
@@ -97,9 +97,8 @@
                 <div class="col-lg-3 col-md-6 col-sm-6" ng-controller="AccessCtrl as Access">
                     <ul class="navbar-nav navbar-expand-lg justify-content-end ">
                         <li class="nav-item">
-                            <a ui-sref="register({user:true, wholesale:false})" class="nav-link"
-                               ng-if="!Access.isAuthenticated()">
-                                <i class="fa fa-user-circle"></i> Iniciar sesión
+                            <a href="mailto:ventas@ladypaolamayoreo.com.mx" class="nav-link">
+                               <i class="fa fa-envelope"></i> ventas@ladypaolamayoreo.com.mx
                             </a>
                         </li>
                     </ul>
