--- a/app/index.html
+++ b/app/index.html
@@ -205,8 +205,8 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "+524531076764", // WhatsApp number
-            company_logo_url: "https://media.tingsystems.com/media/attachments/5/3/c/8/cd82b1cb148f9a16f76443cf23ff48de1f4215e61680ccc340229dee1207/m.png", // URL of company logo (png, jpg, gif)
+            whatsapp: "+523531112870", // WhatsApp number
+            company_logo_url: "https://www.ladypaolamayoreo.com.mx/img/ico/apple-touch-icon-114-precomposed.png", // URL of company logo (png, jpg, gif)
             greeting_message: "Hola, estamos listos pata atenderte, ¿tienes alguna pregunta?", // Text of greeting message
             call_to_action: "Contáctanos", // Call to action
             position: "right", // Position may be 'right' or 'left'
