--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,9 @@
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-<header class="header one-rows-nav">
+<div ui-view="suspended" ng-if="$state.current.name === 'suspended'"></div>
+<div ui-view="building" ng-if="$state.current.name === 'building'"></div>
+<header class="header one-rows-nav" ng-show="!hideIndex">
     <div class="first-row">
         <div class="container">
             <div class="row align-items-center">
@@ -155,11 +157,11 @@
     </nav>
 </header>
 
-<div class="content-area-web">
+<div class="content-area-web" ng-show="!hideIndex">
     <div ui-view="content" autoscroll="true"></div>
 </div>
 
-<footer id="footer_area">
+<footer id="footer_area" ng-show="!hideIndex">
     <ng-include src="'/templates/partials/footer.html'"></ng-include>
 </footer>
 <!-- build:js js/vendor.min.js -->
@@ -236,9 +238,9 @@
         var options = {
             whatsapp: "+524531076764", // WhatsApp number
             company_logo_url: "https://media.tingsystems.com/media/attachments/5/3/c/8/cd82b1cb148f9a16f76443cf23ff48de1f4215e61680ccc340229dee1207/m.png", // URL of company logo (png, jpg, gif)
-            greeting_message: "Hola, estamos listos pata atenderte, ¿tienes alguna pregunta?", // Text of greeting message
+            greeting_message: "Hola, estamos listos para atenderte, ¿tienes alguna pregunta?", // Text of greeting message
             call_to_action: "Contáctanos", // Call to action
-            position: "right", // Position may be 'right' or 'left'
+            position: "right" // Position may be 'right' or 'left'
         };
         var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
