se ajusto error en el texto del whatsapp

--- a/app/index.html
+++ b/app/index.html
@@ -207,7 +207,7 @@
         var options = {
             whatsapp: "+523531112870", // WhatsApp number
             company_logo_url: "https://www.ladypaolamayoreo.com.mx/img/ico/apple-touch-icon-114-precomposed.png", // URL of company logo (png, jpg, gif)
-            greeting_message: "Hola, estamos listos pata atenderte, ¿tienes alguna pregunta?", // Text of greeting message
+            greeting_message: "Hola, estamos listos para atenderte, ¿tienes alguna pregunta?", // Text of greeting message
             call_to_action: "Contáctanos", // Call to action
             position: "right", // Position may be 'right' or 'left'
         };
