--- a/app/index.html
+++ b/app/index.html
@@ -73,56 +73,8 @@
 </p>
 <![endif]-->
 <header class="header one-rows-nav">
-    <div class="first-row">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-3 col-md-2 col-sm-2 data-social-media">
-                    <ul class="navbar-nav navbar-expand-lg mobile-hidde">
-                        <li class="nav-item" ng-repeat="social in socialMedia">
-                            <a class="nav-link" href="{{ social.excerpt }}"><span
-                                ng-bind-html="social.content | trustHtml"></span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6 col-sm-4 mobile-hidde" ng-controller="GetQuerySearchCtrl as Search">
-                    <form name="search" role="search" class="input-search"
-                          ng-submit="Search.globalSearch('product')">
-                        <md-input-container md-no-float>
-                            <input id="validationServerUsername" placeholder="Buscar"
-                                   aria-describedby="inputGroupPrepend3" ng-model="Search.searchTerm" required>
-                            <md-icon class="fa fa-search"></md-icon>
-                        </md-input-container>
-                    </form>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6" ng-controller="AccessCtrl as Access">
-                    <ul class="navbar-nav navbar-expand-lg justify-content-end ">
-                        <li class="nav-item">
-                            <a href="mailto:ventas@ladypaolamayoreo.com.mx" class="nav-link">
-                               <i class="fa fa-envelope"></i> ventas@ladypaolamayoreo.com.mx
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-dark nav-theme">
-        <div class="container">
-            <a ui-sref="home" class="navbar-brand">
-                <img src="img/logo.png" class="logo" alt="Lady Paola">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="fa fa-bars"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav justify-content-center">
-                    <li class="nav-item" ng-repeat="item in mainNavMenu">
-                        <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <div class="first-row">    
+        <ng-include src="'/templates/partials/navbar.html'"></ng-include>
     </nav>
 </header>
 
