update dependencies and add imagen zoom in product detail

--- a/app/index.html
+++ b/app/index.html
@@ -43,8 +43,6 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="lib/angular-material/angular-material.css" />
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
-    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
-    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.theme.default.css" />
     <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
     <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
@@ -52,6 +50,7 @@
     <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
     <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/wip-image-zoom/dist/wip-image-zoom.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -101,8 +100,6 @@
 <script src="lib/angular-messages/angular-messages.js"></script>
 <script src="lib/angular-material/angular-material.js"></script>
 <script src="lib/jquery/dist/jquery.js"></script>
-<script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <script src="lib/angular-deckgrid/angular-deckgrid.js"></script>
 <script src="lib/lightbox2/dist/js/lightbox.js"></script>
 <script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
@@ -120,6 +117,7 @@
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/popper.js/dist/umd/popper.js"></script>
+<script src="lib/wip-image-zoom/dist/wip-image-zoom.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
