add categories products and search pagination by get params

--- a/app/index.html
+++ b/app/index.html
@@ -118,6 +118,7 @@
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/popper.js/dist/umd/popper.js"></script>
 <script src="lib/wip-image-zoom/dist/wip-image-zoom.js"></script>
+<script src="lib/underscore/underscore.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
