add refresh token

--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
 <script src="lib/popper.js/dist/umd/popper.js"></script>
 <script src="lib/wip-image-zoom/dist/wip-image-zoom.js"></script>
 <script src="lib/underscore/underscore.js"></script>
+<script src="lib/angular-http-auth/src/http-auth-interceptor.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
