add templates for services

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,8 @@
     <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="lib/wip-image-zoom/dist/wip-image-zoom.css" />
+    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
+    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.theme.default.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -119,6 +121,7 @@
 <script src="lib/popper.js/dist/umd/popper.js"></script>
 <script src="lib/wip-image-zoom/dist/wip-image-zoom.js"></script>
 <script src="lib/underscore/underscore.js"></script>
+<script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
