--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,9 @@
     <meta property="product:brand" content="Lady Paola" ng-if="post"/>
     <meta property="product:condition" content="new" ng-if="post"/>
     <meta property="product:price:amount" content="{{ post.price }}" ng-if="post"/>
+    <meta property="product:availability" content="in stock" ng-if="post"/>
     <meta property="fb:app_id" content="1346933925479827" ng-if="post"/>
-    <meta property="retailer_id" content="{{post.id}}" ng-if="post"/>
+    <meta property="product:retailer_item_id" content="{{post.id}}" ng-if="post"/>
     <meta property="og:url" content="https://www.calzalia.mx{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
