--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title ng-bind="pageTitle">{{ initConfig.branchOffice }}</title>
-    <meta name="description" content="{{ post.excerpt }}">
+    <meta name="description" content="{{ post.excerpt }}" ng-if="post && $state.current.name !=='category'">
+    <meta name="description" content="Venta de Calzado en Linea Para Hombre y Mujer">
     <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
