add meta for pinterest

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,8 @@
     <meta property="product:retailer_item_id" content="{{post.id}}" ng-if="post && $state.current.name !=='category'"/>
     <meta property="og:url" content="https://www.calzalia.mx{{ $state.href($state.current.name) }}"/>
     
+    <meta name="p:domain_verify" content="28d54fa945d5d6952e7d63800b3767bc"/>
+
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
