--- a/app/index.html
+++ b/app/index.html
@@ -172,5 +172,10 @@
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-53555832-48', {'cookieDomain': 'none'});
 </script>
+<script>
+    (function(w,d,k,t,u,s,c,f){f=function(t){t=new Date();return t.getFullYear()+''+(t.getMonth()+1)+''+t.getDate()+'T'+t.getHours()+''+t.getMinutes()+''+t.getSeconds()};
+    u='https://widgets-static.embluemail.com/accounts/5695F43D487B043A/scripts/sw_569.js?ts='+f();w[k]=w[k] || [];s=d.createElement(t);
+    s.async=1;s.src=u;c=d.getElementsByTagName(t)[0];c.parentNode.insertBefore(s,c);})(window,document,'_swdg','script');
+    </script>
 </body>
 </html>
